--- a/index.html
+++ b/index.html
@@ -1,57 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <!-- adicionar a meta tag responsiva do bootstrap aqui! -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio - Nome da Aluna</title>
-    <!-- adicionar css do bootstrap aqui! -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Portfólio - Romênia Ishiyama</title>
+
+    <link rel="stylesheet" href="./styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
-    <!-- fontAewsome kit para os ícones do projeto -->
-    <script src="https://kit.fontawesome.com/adb42fac4a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <!-- nav -->
-    <nav>
-        <!-- <img src="" alt=""> -->
-        <p>{re<span>programa</span>}</p>
-        <ul>
-            <li>Habilidades</li>
-            <li>Sobre</li>
-            <li>Projetos</li>
-        </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
+        <div class="container">
+            <a class="navbar-brand text white" href="#">{re<span class="font-weight-light">programa</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="Collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Habilidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Portfólio</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- header -->
     <header>
         <!-- carousel -->
-        <section>
-            <img src="./assets/images/sample-photo-01.jpg" alt="">
-            <img src="./assets/images/sample-photo-02.jpg" alt="">
-            <img src="./assets/images/sample-photo-03.jpg" alt="">
-        </section>
 
-        <!-- contato -->
-        <section>
-            <h1>Nome</h1>
-            <h2>Desenvolvedora front-end</h2>
-            <a href="" target="_blank">
-                <i class="fab fa-github-alt"></i>
-                <span>github.com/nome</span>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data interval="3000">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 imagem-carrosel" src="./assets/images/sample-photo-01.jpg"
+                        alt="Primeiro Slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 imagem-carrosel" src="./assets/images/sample-photo-02.jpg"
+                        alt="Segundo Slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 imagem-carrosel" src="./assets/images/sample-photo-03.jpg"
+                        alt="Terceiro Slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
             </a>
-            <a href="" target="_blank">
-                <i class="fab fa-linkedin"></i>
-                <p>linkedin.com/nome</span>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
             </a>
-            <a href="" target="_blank">
-                <i class="fas fa-envelope"></i>
-                <span>nome@gmail.com</span>
-            </a>
+        </div>
+
+        <section class="py-3">
+            <div class="container text-center">
+                <h1>Romênia Ishiyama</h1>
+                <h3 class="font-italic font-weight-light">Desenvolvedora front-end</h3>
+                <a href="" target="_blank">
+                    <i class="fab fa-github-alt"></i>
+                    <span>github.com/Roms2019</span>
+                </a>
+                <a href="" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                    <span>linkedin.com/romeniaishiyama</span>
+                </a>
+                <a href="" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                    <span>romeniaishiyama@gmail.com</span>
+                </a>
+            </div>
         </section>
-    </header> 
-    
-    <!-- seções - habilidades e sobre -->
+    </header>
+
     <section>
         <h3>Habilidades</h3>
         <div>
@@ -94,7 +127,9 @@
         <section>
             <h3>Sobre</h3>
             <p>Aluna do <span>bootcamp de front-end</span> da {reprograma}.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit facere ea aperiam modi magni asperiores? <span>Impedit qui saepe necessitatibus exercitationem </span> Impedit qui saepe necessitatibus exercitationem debitis perspiciatis ex. Porro ut iste.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit facere ea aperiam modi
+                magni asperiores? <span>Impedit qui saepe necessitatibus exercitationem </span> Impedit qui saepe
+                necessitatibus exercitationem debitis perspiciatis ex. Porro ut iste.</p>
             <p>Outras áreas de interesse: <span>metodologias ágeis, UX, Python, Clojure</span>.</p>
         </section>
     </section>
@@ -111,11 +146,15 @@
 
     <!-- footer -->
     <footer>
-    <small>Desenvolvido com Bootstrap por Nome enquanto aluna da<span><a href="http://reprograma.com.br/index.html"
-        target="_blank">{reprograma}</a></span> 2019</small>
+        <small>Desenvolvido com Bootstrap por Nome enquanto aluna da<span><a href="http://reprograma.com.br/index.html"
+                    target="_blank">{reprograma}</a></span> 2019</small>
     </footer>
-    
+
     <!-- adicionar jQuery aqui! -->
     <!-- adicionar js do bootstrap aqui! -->
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/331d3b967c.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
